# Cella_Framework

./: .gitignore  .mcp.json  ADMISSIONS.md  BOOT.md  CELLA_ARCHITECTURE_v1.3.md  CELLA_SESSION_HANDOFF.md  HANDOFF_2026-07-09.md  LEADS.md  LEVER_AUDIT.md  POSITIONING.md  README.md  ROADMAP.md
Artifact_Schemas/: CAMPAIGN_FAMILY_MAP.json  README.md  RELATION_REGISTRY.json  SCHEMA_REGISTRY.json
Campaign_Library/: README.md
DAG_Library/: MCP_TOOLS.md  README.md  SOURCE_REGISTRY.json  WORKBENCH_ARCHITECTURE.md
Evidence_Store/: README.md
Papers_Library/: README.md
Reference_Material/: CENSUS.md  CLAIM_LEDGER.md  Cella_Kernal_design.txt  DBP_Curvature_Constants_Corrected_Formulation.md  EXCEPTIONAL_LOCUS_REPORT.md  FAITHFULNESS_SEARCH_REPORT.md  FIXTURES.md  GAUGE_INVARIANCE_REPORT.md  INJECTIVITY_IDEAL_REPORT.md  LEAD7_Candidate_D_Output_Channel_Norm_Inverse_Metric.md  RAW_CHART_ROLECHSPEC_REPORT.md  README.md  SELF_GLUE_STRESS_REPORT.md  Theorem_8_1_Curvature_Orbit_Correction.md  Theorem_8_1_New_Math_Extension.md  Three_Channel_KG_Strong_Spec.md  dbp_orbit_calculus.tex  self_glue_monodromy.txt  stage_3_certification_script_v2.py
Reports_Library/: README.md
STATE/: CONSTRAINTS.md  CURRENT.md  DEFINITIONS.md  GAPS.md  RESULTS.md
apps/cella_graph_workbench/native/: CMakeLists.txt  README.md  build_native.py  qmldir.in
apps/cella_graph_workbench/native/shaders/: graph.frag  graph.vert  tonemap.frag  tonemap.vert
apps/cella_graph_workbench/native/src/: cuda_vulkan_graph_item.cpp  cuda_vulkan_graph_item.h  cuda_vulkan_render_node.cpp  cuda_vulkan_render_node.h  plugin.cpp
engine/: pyproject.toml
engine/benchmarks/: benchmark_continuation_cce1.py  replay_continuation_cce1.py
engine/src/cella/: __init__.py  arithmetic.py  campaign.py  campaign_start.py  cell.py  cleanliness.py  dag_mcp_server.py  dag_service.py  dag_views.py  hostile_benchmark.py  mcp_server.py  neutral_sweep.py  observation.py  periods.py  proofs.py  qsqrt.py  reference_lift.py  slope_flow.py  tower.py  typed_ulp.py
engine/src/cella/continuation/: __init__.py  api.py  canonical.py  cce3.py  cce4.py  cce5.py  cce6.py  cce7_inertia.py  certificate.py  checkpoint.py  corridors.py  model.py  pathfinder.py  relative_classes.py  verifier.py
engine/src/cella/continuation/adapters/: __init__.py  base.py  dbp_native_v1.py
engine/src/cella/native_periods/: README.md  account.py  api.py  eft.py  evidence.py  exact_scalar.py  jet_bound.py  m1_schedule.json  records.py  schedule.py  terminal.py
engine/src/cella/pathfinder/: __init__.py
engine/src/cella/pathfinder/api/: __init__.py  contract.py
engine/src/cella/pathfinder/ir/: __init__.py  burden.py  evidence.py  fingerprint.py  obligation.py  scope.py
engine/src/cella/pathfinder/plan/: __init__.py  registry.py
engine/src/cella/pathfinder/recognize/: __init__.py  complete_intersection.py  cover.py  curvature.py  dbp_native.py  elimination.py  finite_extension.py  inertia_strata.py  kummer.py  local_germ.py  real.py  realization.py  rewrite.py  triangular.py  wreath.py
engine/src/cella/pathfinder/scout/: algebra.py  expression.py  kummer.py  newton.py  protocol.py  sturm.py
engine/src/cella/pathfinder/serialize/: __init__.py  canonical.py
engine/tests/: gate_02.py  gate_11.py  gate_agent_race_protocol.py  gate_ahv1_k4_clean.py  gate_all_k_two_radical_kummer.py  gate_campaign_start.py  gate_continuation_cce1.py  gate_continuation_cce2.py  gate_continuation_cce2_route_api.py  gate_continuation_cce3.py  gate_continuation_cce4.py  gate_continuation_cce5.py  gate_continuation_cce6_import.py  gate_continuation_cce7_inertia.py  gate_continuation_cce8.py  gate_continuation_pf0.py  gate_dag_autocommit.py  gate_dag_mcp.py  gate_dag_service.py  gate_dag_views.py  gate_dbp_native_relative_periods.py  gate_graph_workbench_native.py  gate_graph_workbench_ui.py  gate_k3_k6_radicand_kill.py  gate_mcp.py  gate_mcp_arithmetic.py  gate_mcp_campaign.py  gate_mcp_periods.py  gate_mcp_reference.py  gate_mcp_residual_profile.py  gate_mcp_router.py  gate_pathfinder_hostile_benchmark.py  gate_pathfinder_kernel_units.py  gate_pathfinder_m2_extended.py  gate_pathfinder_m2_wrapper.py  gate_pathfinder_mock_host.py  gate_pathfinder_prototype_characterization.py  gate_pathfinder_providers_algebra.py  gate_pathfinder_providers_geometry.py  gate_pathfinder_providers_services.py  (+3 more)
engine/tools/: build_dag_library.py  dag_cli.py  start_campaign.py
engine/tools/pathfinder_m2/cella_pathfinder_m2/: benchmark.py  contact_orbit_benchmark.py  contact_orbit_isolated_benchmark.py  execute.py  model.py
engine/tools/wreath_engine/: README.md  pyproject.toml
engine/tools/wreath_engine/examples/: horizon_static.json  toy_quadratic.json
engine/tools/wreath_engine/m2/: WreathEngine.m2
engine/tools/wreath_engine/tests/: test_f2.py  test_integration_m2.py  test_spec.py
engine/tools/wreath_engine/wreath_engine/: __init__.py  cli.py  jobrun.py  jobs.py  m2run.py  m2session.py  pipeline.py  spec.py
tools/pathfinder_m2/: pyproject.toml
tools/pathfinder_m2/cella_pathfinder_m2/: __init__.py  benchmark.py  capabilities.py  contact_orbit_benchmark.py  contact_orbit_isolated_benchmark.py  wrapper.py
(+2309 files in other folders)
