[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cella"
version = "0.1.0"
description = "Cella Framework — exact residue accounting engine"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cella = ["*.md", "*.json"]
