[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cella"
version = "0.1.0"
description = "Cella Framework — exact residue accounting engine"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.28.1",
    "mpmath>=1.3.0",
    "sympy>=1.13.0",
]

[project.optional-dependencies]
views = ["networkx>=3.2"]
workbench = ["networkx>=3.2", "PySide6>=6.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cella = ["*.md", "*.json"]
