[project]
name = "cella-pathfinder-m2"
version = "0.1.0"
description = "External Macaulay2 wrapper and benchmark adapter for Cella Pathfinder"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cella_pathfinder_m2"]
